# libcoring

./: .clang-format  .gitignore  CMakeLists.txt  DEVLOG.md  LICENSE.txt  README  README.md
.github/workflows/: all_compile.yml  unit_tests.yml
coring/: coring.hpp  coring_config.hpp
coring/async/: async_processor.hpp  async_scope.hpp  async_task.hpp  awaitable_traits.hpp  broken_promise.hpp  buffer.hpp  config.hpp  fmap.hpp  io_awaitable.hpp  is_awaitable.hpp  on_scope_exit.hpp  single_consumer_async_auto_reset_event.hpp  single_consumer_event.hpp  sync_wait.hpp  task.hpp  uio_async.hpp  when_all.hpp  when_all_ready.hpp
coring/async/detail/: any.hpp  get_awaiter.hpp  is_awaiter.hpp  lightweight_manual_reset_event.hpp  manual_lifetime.hpp  sync_wait_task.hpp  when_all_counter.hpp  when_all_ready_awaitable.hpp  when_all_task.hpp
coring/demo/: CMakeLists.txt  echo-cli.py  echo_server.cpp  http_helper.cpp  http_helper.hpp  http_server.cpp  short_read_problem.cpp  single_server.cpp  threaded_server.cpp  use_async_task.cpp  use_cancel_token.cpp
coring/demo/public/: index.html  scripts.js  style.css  test.html
coring/io/: cancelled_error.hpp  channel.cpp  channel.hpp  completion_dispatcher.hpp  config.hpp  event.cpp  event.hpp  io_awaitable.hpp  io_context.cpp  io_context.hpp  io_uring_impl.hpp  timeout.hpp  timeout_awaitable.hpp  timer.hpp
coring/io/uio/: uio.cpp  uio.hpp  uio_completion_dispatcher.hpp  uio_context.hpp
coring/logging/: CMakeLists.txt  async_logger.cpp  async_logger.hpp  log_file.hpp  log_timestamp.hpp  logging-inl.hpp  logging.cpp  logging.hpp  spsc_ring.hpp
coring/logging/fmt/: CMakeLists.txt  args.h  format-inl.h  format.cc  format.h
coring/net/: CMakeLists.txt  acceptor.cpp  acceptor.h  acceptor.hpp  async_buffer.cpp  async_buffer.hpp  buffer_pool.hpp  buffered.cpp  buffered.hpp  client.cpp  client.hpp  config.hpp  connect_to.hpp  connector.cpp  connector.h  connector.hpp  endian.hpp  endpoint.cpp  endpoint.hpp  file.cpp  file.hpp  file_descriptor.hpp  server.cpp  server.hpp  socket.cpp  socket.hpp  socket_duplexer.hpp  socket_reader.cpp  socket_reader.hpp  socket_writer.hpp  tcp_connection.cpp  tcp_connection.hpp
coring/proactor/: CMakeLists.txt  proactor.cpp  proactor.h
coring/test/: CMakeLists.txt  async_log_test.cpp  async_logger_test.cpp  buffer_selection_test.cpp  buffer_test.cpp  io_context_test.cpp  onepage_webserver.cpp  revised_singlepage_webserver.cpp  single_server.cpp  skiplist_test.cpp  tcp_client_raw.cpp  tcp_server_raw.cpp  test_async_task.cpp  test_short_read.cpp  test_simple_cancellation.cpp  test_timeout_connect.cpp  threaded_server.cpp  uio_ctx_test.cpp
coring/utils/: CMakeLists.txt  buffer.cpp  buffer.hpp  buffer_base.hpp  codec.cpp  codec.hpp  const_buffer.hpp  debug.hpp  execute.hpp  file_descriptor.hpp  io_utils.cpp  io_utils.hpp  noncopyable.hpp  skiplist.hpp  skiplist_map.hpp  thread.cpp  thread.hpp  thread_pool.cpp  thread_pool.hpp  time_utils.hpp  timestamp.hpp
coring/utils/fmt/: CMakeLists.txt  args.h
coring/utils/logging/: CMakeLists.txt  async_logger.cpp  async_logger.hpp  hello_.cpp  log_file.cpp  log_file.hpp  logger.hpp  logging-inl.hpp  logging.cpp  logging.hpp  spsc_ring.hpp  test_log.cpp  timestamp.hpp
coring/utils/logging/fmt/: args.h
docs/: bench.md  cancellation.md  design.md  experiment.md  getting-start.md
examples/: CMakeLists.txt  connect_with_timeout.cpp  do_logging.cpp  echo-cli.py  echo_server.cpp  http_helper.hpp  http_server.cpp  revised_http_server.cpp  short_read_problem.cpp  single_server.cpp  threaded_server.cpp  use_async_task.cpp
examples/http1/: http_context.hpp  http_request.hpp  http_response.hpp
examples/public/: scripts.js  test.html
include/coring/: acceptor.hpp  async_logger.hpp  async_scope.hpp  async_task.hpp  awaitable_traits.hpp  broken_promise.hpp  buffer.hpp  buffer_pool.hpp  context_pool.h  coring.hpp  coring_config.hpp  endian.hpp  endpoint.hpp  eof_error.hpp  execute.hpp  file.hpp  file_descriptor.hpp  fmap.hpp  io_context.hpp  is_awaitable.hpp  logging.hpp  signals.hpp  single_consumer_event.hpp  socket.hpp  socket_duplexer.hpp  socket_reader.hpp  socket_writer.hpp  sync_wait.hpp  task.hpp  tcp_connection.hpp  thread.hpp  timer.hpp  timestamp.hpp  when_all.hpp  when_all_ready.hpp
include/coring/detail/: copyable.hpp  debug.hpp  io_context_service.hpp  io_utils.hpp  noncopyable.hpp  skiplist_map.hpp  str_utils.hpp  thread.hpp  time_utils.hpp
include/coring/detail/async/: get_awaiter.hpp  is_awaiter.hpp  lightweight_manual_reset_event.hpp  remove_rvalue_reference.hpp  sync_wait_task.hpp  unwrap_reference.hpp  void_value.hpp  when_all_ready_awaitable.hpp  when_all_task.hpp
include/coring/detail/io/: io_awaitable.hpp  io_uring_context.hpp
include/coring/detail/logging/: log_file.hpp  log_timestamp.hpp  logging-inl.hpp  spsc_ring.hpp
include/coring/detail/logging/fmt/: args.h  core.h  format.cc  format.h
source/logging/: CMakeLists.txt  async_logger.cpp  log_file.cpp  logging.cpp
test/: CMakeLists.txt  buffer_selection_test.cpp  buffer_test.cpp  context_pool_test.cpp  io_context_test.cpp  pmr_benchmark.cpp  pmr_skiplist_test.cpp  skiplist_test.cpp
